fix name read for report
