# docs/swagger.yaml
@@ -287,15 +287,14 @@ paths:
       - reports
     post:
       consumes:
-      - application/json
+      - application/x-www-form-urlencoded
       description: Create a new report
       parameters:
-      - description: Report to create
-        in: body
-        name: report
+      - description: Report name
+        in: formData
+        name: name
         required: true
-        schema:
-          $ref: '#/definitions/model.Report'
+        type: string
       produces:
       - application/json
       responses:
